--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 </head>
 <body>
     <header>
-        <h1>spencers.zone</h1>
+        <h1>Luke's Audio Emporium</h1>
     </header>
     <main>
         <div class="audio-container">
