--- a/index.html
+++ b/index.html
@@ -70,28 +70,28 @@
     <main>
         <div class="audio-container">
             <div>
-                <h2 class="song-title">Church</h2>
+                <h2 class="song-title">Take Me To Church (Hozier)</h2>
                 <audio controls>
                     <source src="Church.mp3" type="audio/mp3">
                     Your browser does not support the audio element.
                 </audio>
             </div>
             <div>
-                <h2 class="song-title">HeyYa</h2>
+                <h2 class="song-title">Hey Ya! (Outkast)</h2>
                 <audio controls>
                     <source src="HeyYa.mp3" type="audio/mp3">
                     Your browser does not support the audio element.
                 </audio>
             </div>
             <div>
-                <h2 class="song-title">Unshaken</h2>
+                <h2 class="song-title">Unshaken (D'Angelo)</h2>
                 <audio controls>
                     <source src="Unshaken.mp3" type="audio/mp3">
                     Your browser does not support the audio element.
                 </audio>
             </div>
             <div>
-                <h2 class="song-title">KickBack</h2>
+                <h2 class="song-title">Chainsaw Man Opening</h2>
                 <audio controls>
                     <source src="KickBack.mp3" type="audio/mp3">
                     Your browser does not support the audio element.
@@ -108,7 +108,7 @@
         setInterval(() => {
             document.title = titles[titleIndex];
             titleIndex = (titleIndex + 1) % titles.length;
-        }, 2000);
+        }, 1000);
     </script>
 </body>
 </html>
