--- a/index.html
+++ b/index.html
@@ -97,6 +97,35 @@
                     Your browser does not support the audio element.
                 </audio>
             </div>
+            <!-- New Audio Entries -->
+            <div>
+                <h2 class="song-title">Skyfall (Adele)</h2>
+                <audio controls>
+                    <source src="Skyfall.mp3" type="audio/mp3">
+                    Your browser does not support the audio element.
+                </audio>
+            </div>
+            <div>
+                <h2 class="song-title">Dark Red (Steve Lacy)</h2>
+                <audio controls>
+                    <source src="DarkRed.mp3" type="audio/mp3">
+                    Your browser does not support the audio element.
+                </audio>
+            </div>
+            <div>
+                <h2 class="song-title">Many Men (50 Cent)</h2>
+                <audio controls>
+                    <source src="ManyMen.mp3" type="audio/mp3">
+                    Your browser does not support the audio element.
+                </audio>
+            </div>
+            <div>
+                <h2 class="song-title">Not Like Us (K. Lamar)</h2>
+                <audio controls>
+                    <source src="NotLikeUs.mp3" type="audio/mp3">
+                    Your browser does not support the audio element.
+                </audio>
+            </div>
         </div>
     </main>
 
