--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
   // Check if the entered password is correct
   if (userPassword === correctPassword) {
     // If the password is correct, redirect to the main page
-    window.location.href = "https://music.spencers.zone/mainpage";
+    window.location.href = "https://robby.spencers.zone/mainpage";
   } else {
     // If the password is incorrect, show an alert and redirect to another page
     alert("Incorrect password. You will be redirected.");
-    window.location.href = "https://www.spencers.zone/";  // You can change this to any fallback page
+    window.location.href = "https://www.spencers.zone/robinson";  // You can change this to any fallback page
   }
 </script>
