--- a/mainpage.html
+++ b/mainpage.html
@@ -97,7 +97,6 @@
                     Your browser does not support the audio element.
                 </audio>
             </div>
-            <!-- New Audio Entries -->
             <div>
                 <h2 class="song-title">Skyfall (Adele)</h2>
                 <audio controls>
@@ -123,6 +122,21 @@
                 <h2 class="song-title">Not Like Us (K. Lamar)</h2>
                 <audio controls>
                     <source src="NotLikeUs.mp3" type="audio/mp3">
+                    Your browser does not support the audio element.
+                </audio>
+            </div>
+            <!-- New Audio Slots -->
+            <div>
+                <h2 class="song-title">Ransom (LT)</h2>
+                <audio controls>
+                    <source src="Random.mp3" type="audio/mp3">
+                    Your browser does not support the audio element.
+                </audio>
+            </div>
+            <div>
+                <h2 class="song-title">Beat It (Michael Jackson)</h2>
+                <audio controls>
+                    <source src="BeatIt.mp3" type="audio/mp3">
                     Your browser does not support the audio element.
                 </audio>
             </div>
