--- a/mainpage.html
+++ b/mainpage.html
@@ -129,7 +129,7 @@
             <div>
                 <h2 class="song-title">Ransom (LT)</h2>
                 <audio controls>
-                    <source src="Random.mp3" type="audio/mp3">
+                    <source src="Ransom.mp3" type="audio/mp3">
                     Your browser does not support the audio element.
                 </audio>
             </div>
